Fix padding in featured books more links and notes in content when viewed in portrait mode on mobile

--- a/src/scripts/modules/featured-books/featured-books.less
+++ b/src/scripts/modules/featured-books/featured-books.less
@@ -19,6 +19,7 @@
       .make-sm-column(6);
       display: none;
       margin-bottom: 3rem; // Add spacing between books when they're aligned vertically
+      padding-bottom: 2rem;
 
       &::after {
       	display: block;
