--- a/src/scripts/modules/media/body/body.less
+++ b/src/scripts/modules/media/body/body.less
@@ -40,7 +40,12 @@
     @import 'content.less';
   }
 
-  cnx-pi {
+   cnx-pi {
     display: none;
+  }
+
+  @media (max-width: @screen-xs-max) {
+    padding-right: 2rem;
+    padding-left: 2rem;
   }
 }
