--- a/src/scripts/modules/media/footer/footer.less
+++ b/src/scripts/modules/media/footer/footer.less
@@ -4,6 +4,8 @@
 .media-footer {
   margin: 4rem 6rem 6rem 6rem;
 
+  @media
+
   h3 {
     margin-bottom: 2rem;
     font-weight: 300;
